--- a/shop/templates/registration/login.html
+++ b/shop/templates/registration/login.html
@@ -1,10 +1,10 @@
 {% extends 'shop/base.html' %}
 {% load i18n %}
 {% load form_tags %}
-
 {% block title %}Вход{% endblock %}
-
 {% block content %}
+
+
 <div class="d-flex justify-content-center align-items-center" style="min-height: 70vh;">
     <div class="card shadow p-4 login-card" style="width: 100%; max-width: 400px;">
         <h3 class="text-center mb-4">{% trans "Вход в аккаунт" %}</h3>
@@ -17,9 +17,18 @@
             </div>
         {% endfor %}
         {% endif %}
-
+        
         <form method="post">
-            {% csrf_token %}
+                {% csrf_token %}
+
+                {% if form.non_field_errors %}
+                    <div class="alert alert-danger">
+                {% for error in form.non_field_errors %}
+                    {{ error }}
+                {% endfor %}
+                    </div>
+                {% endif %}
+
             <div class="mb-3">
                 <label for="id_username" class="form-label">{% trans "Имя пользователя" %}</label>
                 {{ form.username|add_class:"form-control" }}
