--- a/shop/templates/registration/register.html
+++ b/shop/templates/registration/register.html
@@ -8,21 +8,33 @@
 <div class="d-flex justify-content-center align-items-center" style="min-height: 80vh;">
     <div class="card shadow p-4 register-card" style="width: 100%; max-width: 500px;">
         <h3 class="text-center mb-4">{% trans "Создать аккаунт" %}</h3>
+
         <form method="post">
             {% csrf_token %}
+
             {% for field in form %}
                 <div class="mb-3">
                     <label class="form-label">{{ field.label }}</label>
                     {{ field|add_class:"form-control" }}
                     {% if field.errors %}
-                        <div class="text-danger small">{{ field.errors }}</div>
+                        <div class="text-danger small" >{{ field.errors }}</div>
                     {% endif %}
                 </div>
             {% endfor %}
+
+            {% if form.non_field_errors %}
+            <div class="text-danger small" style="margin-bottom: 15px;">
+            {% for error in form.non_field_errors %}
+            {{ error }}
+            {% endfor %}
+            </div>
+            {% endif %}
+
             <div class="d-grid">
                 <button type="submit" class="btn btn-success">{% trans "Зарегистрироваться" %}</button>
             </div>
         </form>
+        
         <p class="mt-3 text-center">
             {% trans "Уже есть аккаунт?" %} <a href="{% url 'login' %}">{% trans "Войти" %}</a>
         </p>
