--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -269,6 +269,7 @@
 
   <nav class="navbar navbar-expand-lg shadow">
     <div class="container-fluid px-3">
+      
       <div class="d-flex align-items-center gap-2">
         <a class="navbar-brand mb-0" href="{% url 'home' %}"><strong>Jewelry Shop</strong></a>
         {% if user.is_authenticated %}
@@ -333,7 +334,7 @@
           <h5>{% trans "Информация" %}</h5>
           <a href="{% url 'contact' %}">{% trans "Наш магазин" %}</a><br>
           <a href="{% url 'about' %}">{% trans "О нас" %}</a><br>
-          <a href="https://t.me/TheDurovFan">{% trans "Поддержка" %}</a>
+          <a href="https://t.me/NaNXS">{% trans "Поддержка" %}</a>
         </div>
       </div>
       <hr>
